# TMP_Benchmark

./: README.md
andor_msgs/: CMakeLists.txt  package.xml
andor_planner/: CMakeLists.txt  package.xml
andor_planner/files/kinesthetic/collaborative/: ActionDefinitionList_collaborative.txt  StateActionList_collaborative.txt
andor_planner/files/kinesthetic/normal/: ActionDefinitionList_normal.txt  StateActionList_normal.txt
andor_planner/files/panda/empty/: ActionDefinitionList_empty.txt  StateActionList_panda1.txt  objectTypes.txt
andor_planner/files/panda/main/: ActionDefinitionList_main.txt  StateActionList_main.txt
andor_planner/files/panda/main1/: ActionDefinitionList_main1.txt  StateActionList_main1.txt
andor_planner/files/panda/main2/: ActionDefinitionList_main2.txt  StateActionList_main2.txt
andor_planner/files/panda/panda1/: StateActionList_panda1.txt
andor_planner/files/panda/panda2/: ActionDefinitionList_panda2.txt  StateActionList_panda2.txt
andor_planner/files/panda/r1t1/: StateActionList_r1t1.txt
andor_planner/files/panda/r1t2/: ActionDefinitionList_r1t2.txt  StateActionList_r1t2.txt
andor_planner/files/panda/r2t1/: ActionDefinitionList_r2t1.txt  StateActionList_r2t1.txt
andor_planner/files/panda/r2t2/: StateActionList_r2t2.txt
andor_planner/files/simpletask/: ActionDefinitionList_simpletask.txt  StateActionList_simpletask.txt
andor_planner/files/simpletaskdual/: ActionDefinitionList_simpletaskdual.txt  StateActionList_simpletaskdual.txt
andor_planner/files/tamp/: ActionDefinitionList_simpletask.txt  ActionDefinitionList_tamp.txt  StateActionList_simpletask.txt  StateActionList_tamp.txt
andor_planner/files/tamp/backupfiles/: ActionDefinitionList_tamp.txt  StateActionList_tamp.txt
andor_planner/files/tamp2/: ActionDefinitionList_normal.txt  StateActionList_normal.txt
andor_planner/files/tamphuman/: ActionDefinitionList_tamphuman.txt  StateActionList_tamphuman.txt
andor_planner/files/tamphuman/collaborative/: ActionDefinitionList_collaborative.txt  StateActionList_collaborative.txt
andor_planner/files/tmp_benchmarks/cubeworld/: StateActionList_cubeworld.txt
andor_planner/files/tmp_benchmarks/hanoi/: ActionDefinitionList_hanoi.txt  StateActionList_hanoi.txt
andor_planner/files/tmp_benchmarks/kitchen/: StateActionList_kitchen.txt
andor_planner/files/tmp_benchmarks/nonmonotonic/: ActionDefinitionList_nonmonotonic.txt  StateActionList_nonmonotonic.txt
andor_planner/files/tmp_benchmarks/sort/: StateActionList_sort.txt
andor_planner/files/youbot/: ActionDefinitionList_simpletask.txt  StateActionList_simpletask.txt
andor_planner/include/: seq_planner_class.cpp  seq_planner_class.hpp  seq_planner_class_youbot.cpp
andor_planner/src/: multi_planner.cpp  panda1_planner.cpp  panda2_planner.cpp  seq_planner_main.cpp  seq_planner_youbot.cpp
andors/: CMakeLists.txt  package.xml
andors/files/: Table_Assembly.txt~
andors/files/kinesthetic/: collaborative.txt  normal.txt
andors/files/panda/: empty.txt  main.txt  main1.txt  main2.txt  panda1.txt  panda2.txt  r1t1.txt  r1t2.txt  r2t1.txt  r2t2.txt
andors/files/simple/: simpletask.txt
andors/files/simpledual/: simpletaskdual.txt
andors/files/tamp/: tamp.txt
andors/files/tamp/backupfile/: tamp.txt
andors/files/tamp2/: normal.txt
andors/files/tamphuman/: collaborative.txt  tamphuman.txt
andors/files/tmp_benchmark/: cubeworld.txt  hanoi.txt  kitchen.txt  nonmonotonic.txt  sort.txt
andors/include/: andor_aograph.cpp  andor_aograph.h
andors/src/: andor_main.cpp  andor_youbot.cpp  multiple_andor.cpp
pr2_common/: mypr2.urdf
pr2tamp_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
pr2tamp_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  pr2.srdf  ros_controllers.yaml
pr2tamp_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  (+7 more)
tamp_interface/: CMakeLists.txt  package.xml
tamp_knowledge/: CMakeLists.txt  package.xml
tamp_knowledge/files/: pose_tamp2.txt  poses.txt  tamp.txt  tamp_cubeworld.txt  tamp_hanoi.txt  tamp_kitchen.txt  tamp_nonmonotonic.txt  tamp_sort.txt
tamp_knowledge/include/: points.h  tamp_knowledge.cpp  tamp_knowledge.h  world.h
tamp_knowledge/launch/: tamp_knowledge_cubeworld.launch  tamp_knowledge_hanoi.launch  tamp_knowledge_kitchen.launch  tamp_knowledge_nonmonotonic.launch  tamp_knowledge_sort.launch
tamp_knowledge/src/: tamp_knowledge_main.cpp
tamp_motion_planner/: CMakeLists.txt  package.xml
tamp_motion_planner/config/: controllers.yaml  pr2_base_controller_info.yaml
tamp_motion_planner/include/: my_pid.h  panda_planner.cpp  panda_planner.h  pr2_planner.cpp  pr2_planner.h  pr_hw_interface.cpp  pr_hw_interface.h  tamp_motion.cpp  tamp_motion.hpp
tamp_motion_planner/include/baxter_moveit_scripts/: baxter_move_group_interface.h
tamp_motion_planner/launch/: baxter.launch  get_joint_values.launch  pr2controll.launch  tampmotion.launch
tamp_motion_planner/src/: my_pid.cpp  pr2_hw_main.cpp  send_random.cpp  send_ready.cpp  subpub.cpp  tamp_motion_baxter.cpp  tamp_motion_main.cpp  tamp_motion_panda.cpp  tamp_motion_pr2.cpp
tamp_motion_planner/src/tools/: baxter_move_group_interface.cpp  end_effector_position.cpp  get_joint_values.cpp
tamp_msgs/: CMakeLists.txt  package.xml
tamp_msgs/msg/: change_planner.msg  tampSimulationReq.msg  tampSimulationRes.msg
tamp_msgs/srv/: ackquest.srv  changeplansrv.srv  executetraj.srv  hanoipp.srv  knowledge.srv  knowledgetamp.srv  lastgraph.srv  obj.srv  objaectstatus.srv  objectclolorsrv.srv  objectcolorsrv.srv  objectssrv.srv  pandaee.srv  pandafreeplan.srv  registerdata.srv  registerplace.srv  removeobject.srv  resetsrv.srv  sceneobjects.srv  simutionsrv.srv  trajquest.srv  vrepgripper.srv  vrepmotion.srv  vreptarget.srv
tamp_scene/: CMakeLists.txt  package.xml
(+50 files in other folders)
